View Issue Details

IDProjectCategoryView StatusLast Update
0032295Open CASCADEOCCT:Codingpublic2021-04-17 14:02
Reporterkgv Assigned Tokgv  
PrioritynormalSeverityintegration request 
Status closedResolutionfixed 
Product Version7.5.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032295: Coding Rules - merge GCPnts_AbscissaPoint.pxx into GCPnts_AbscissaPoint.cxx
DescriptionGCPnts_AbscissaPointis implemented using generic methods in GCPnts_AbscissaPoint.pxx.
It is proposed replacing generic methods via C++ templates.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot required

Activities

git

2021-04-10 15:36

administrator   ~0100227

Branch CR32295 has been created by kgv.

SHA-1: 468662f728cd5afd520055acd7484f9d9c8eaa79


Detailed log of new commits:

Author: kgv
Date: Sat Apr 10 15:36:47 2021 +0300

    0032295: Coding Rules - merge GCPnts_AbscissaPoint.pxx into GCPnts_AbscissaPoint.cxx

git

2021-04-12 23:19

administrator   ~0100261

Branch CR32295 has been updated forcibly by kgv.

SHA-1: 24579ecd6ea9fcab2574e5d6c740a12652f0d808

kgv

2021-04-12 23:21

developer   ~0100265

Please raise the patch
- OCCT: branch CR32295.

bugmaster

2021-04-17 13:07

administrator   ~0100383

Combination -
OCCT branch : IR-2021-04-16
master SHA - 1294d5e39ed35dc97b2241956855fe794a03b0d8
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-04-16 SHA - 03c3cb382950144b11c09108f24673216c4e5922
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17987.850000000446 / 18020.24000000038 [-0.18%]
Products
Total CPU difference: 11564.760000000093 / 11543.43000000007 [+0.18%]
Windows-64-VC14:
OCCT
Total CPU difference: 19496.34375 / 19510.890625 [-0.07%]
Products
Total CPU difference: 12932.890625 / 12891.265625 [+0.32%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-04-17 14:02

administrator   ~0100408

Branch CR32295 has been deleted by inv.

SHA-1: 24579ecd6ea9fcab2574e5d6c740a12652f0d808

Related Changesets

occt: master 24579ecd

2021-04-10 12:36:47

kgv

Details Diff
0032295: Coding Rules - merge GCPnts_AbscissaPoint.pxx into GCPnts_AbscissaPoint.cxx Affected Issues
0032295
mod - src/GCPnts/FILES Diff File
mod - src/GCPnts/GCPnts_AbscissaPoint.cxx Diff File
mod - src/GCPnts/GCPnts_AbscissaPoint.hxx Diff File
rm - src/GCPnts/GCPnts_AbscissaPoint.pxx Diff File

Issue History

Date Modified Username Field Change
2021-04-10 15:35 kgv New Issue
2021-04-10 15:35 kgv Assigned To => kgv
2021-04-10 15:36 git Note Added: 0100227
2021-04-12 23:19 git Note Added: 0100261
2021-04-12 23:21 kgv Note Added: 0100265
2021-04-12 23:21 kgv Assigned To kgv => bugmaster
2021-04-12 23:21 kgv Status new => resolved
2021-04-12 23:22 kgv Status resolved => reviewed
2021-04-17 13:07 bugmaster Note Added: 0100383
2021-04-17 13:07 bugmaster Status reviewed => tested
2021-04-17 13:11 bugmaster Test case number => Not required
2021-04-17 13:41 kgv Changeset attached => occt master 24579ecd
2021-04-17 13:41 kgv Assigned To bugmaster => kgv
2021-04-17 13:41 kgv Status tested => verified
2021-04-17 13:41 kgv Resolution open => fixed
2021-04-17 14:02 git Note Added: 0100408